BuildHughes/translation-tool/inputs/source_meta/objects/Hsvc_CallMe__c.object
<CustomObject>
    <fields>
        <fullName>Hsvc_CallBackSuccess__c</fullName>
        <label>Call-back Success</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_PhoneNumber__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hsvc_RecepientName__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Me</relationshipLabel>
        <relationshipName>Call_Me</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hsvc_ServiceId__c</fullName>
        <label>Service ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Call Me</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Call Me Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Me</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>